--- a/SalesIQiOSSDKDemo/Info.plist
+++ b/SalesIQiOSSDKDemo/Info.plist
@@ -20,6 +20,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Used to check the bluetooth status </string>
+	<key>NSCameraUsageDescription</key>
+	<string>Uses camera to take photos and share in chat</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Uses location information to show user locatoin in maop </string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Uses album to select photos and share in chat</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
